# Local-File-MCP-Server

./: .env.example  .gitignore  INSTALL.md  LICENSE  Makefile  README.md  claude-config.json  mcp-config.json  pyproject.toml  requirements.txt  run.sh  setup.sh
.github/workflows/: python-publish.yml
allowed/: .gitkeep
scripts/: __init__.py  generate_key.py  test_client.py  test_http_client.py
src/: fastmcp_server.py  server.py
src/fastmcp_file_server/: __init__.py  cli.py  server.py
tests/: test_fastmcp_server.py  test_scope_validation.py  test_server.py
