[project]
name = "fastmcp-file-server"
version = "1.0.0"
description = "Secure MCP file server with multi-tier authentication"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "reportlab>=4.0.0",
    "pillow>=10.0.0",
    "pandas>=2.0.0",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.9",
]
